Fix login label alignment

--- a/client/src/components/loginComponents/loginForm.css
+++ b/client/src/components/loginComponents/loginForm.css
@@ -134,6 +134,7 @@ input[type='submit'] {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   width: auto;
+  margin-bottom: 0;
 }
 
 .login input[type='password'],
